--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 		<!--Copyright--> 
 		<footer>
 			<div class="container">
-				<small>Copyright &copy;2020 - Intan Dewi Hapsari</small>
+				<small>Copyright &copy; 2020 - Intan Dewi Hapsari. All Rights Reserved</small>
 			</div>
 		</footer>
 </body>
