--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 	<!--footer-->
 	<footer>
 		<div class="container">
-			<small>Copyright &copy;2020 - Ragil Putri Rahmadani</small>
+			<small>Copyright &copy; 2020 - Intan Dewi Hapsari. All Rights Reserved</small>
 		</div>
 	</footer>
 </body>
