--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <!--footer-->
 	<footer>
 		<div class="container">
-			<small>Copyright &copy;2020 - Intan Dewi Hapsari</small>
+			<small>Copyright &copy; 2020 - Intan Dewi Hapsari. All Rights Reserved</small>
 		</div>
 	</footer>
 </body>
